# test_DrWeb_web

./: .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
config/: settings.py  urls.py
kvstore/: store.py  urls.py  views.py
kvstore/templates/: index.html
nginx/: nginx.conf
static/css/: style.css
static/js/: script.js
