[tool.poetry]
name = "test-drweb-django"
version = "0.1.0"
description = ""
authors = ["rinatrinat <rinatluske@gmail.com>"]
readme = "README.md"
packages = [{include = "test_drweb_django"}]

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
python-dotenv = "^1.1.0"
gunicorn = "^23.0.0"


[tool.poetry.group.lint.dependencies]
isort = "^6.0.1"
flake8 = "^7.2.0"
black = "^25.1.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
